# up-cam

./: .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml
src/: __main__.py  example.py  example1.py  files.py
