[tool.poetry]
name = "martian-mines"
version = "0.1.0"
description = "Competition code for `Martian Mines` for Droniad 2024 competition"
authors = ["Jędrzej Stasik <jedrzej.stasik@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.9.0.80"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"
mypy = "^1.8.0"
pylint = "^3.0.3"
flake8 = "^6.1.0"
taskipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
formatting = "python -m black . && python -m isort ."
pylint = "pylint src tests"
mypy = "python -m mypy --namespace-packages src"
flake8 = "poetry run python -m flake8 src && echo All is ok"

black_check = "black --check src"
isort_check = "isort --check src"

[tool.isort]
profile = "black"
